--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "portfolio_try2.0",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mashakrot.github.io/main_portfolio",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "vercel --prod"
+    "export": "next export",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@react-three/drei": "^9.105.4",
@@ -41,6 +44,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.1.4",
+    "gh-pages": "^6.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
